<resources>
    <string name="app_name">Surrogate</string>
    <string name="action_settings">Settings</string>
    <string name="action_import_default_rules_set">Import Default Rules</string>
    <string name="action_share_rule_set">Share Rules</string>
    <string name="action_import_from_internet">Download Rules</string>
    <string name="title_activity_rule_definition">RuleDefinition</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="rule_clazz">Full class name</string>
    <string name="rule_method">Method name</string>
    <string name="rule_return_type">Return type</string>
    <string name="rule_return_value">Return value</string>
    <string name="rule_parameters_type">Method parameters type (one per line)</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="package_name">Package name</string>
    <string name="rule_list">Rule list</string>
    <string name="enabled">Enabled</string>
    <string name="delete">Delete</string>
    <string name="copy">Copy</string>
    <string name="share">Share</string>


    <string-array name="array_return_type">
        <item>java.lang.Boolean</item>
        <item>java.lang.Integer</item>
        <item>java.lang.String</item>
        <item>Custom</item>
    </string-array>
</resources>
